--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22365,3 +22365,17 @@ readers do not read off random characters that represent icons */
   right: -3px;
 }
 
+.orange {
+  color: #FF4500;
+}
+
+.menu .menu-list .is-active {
+  background-color: #D8BFD8;
+  border-right: 8px solid #BA55D3;
+}
+
+.menu .menu-list a:hover {
+  background-color: #D8BFD8;
+  border-right: 8px solid #BA55D3;
+}
+
