--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,8 @@
 
 // Import bulma extensions
 @import '~bulma-extensions/bulma-calendar/dist/css/bulma-calendar.min.css';
+//@import '~bulma-extensions/bulma-steps/dist/css/bulma-steps.min.css';
+@import "~bulma-o-steps/bulma-steps.min";
 
 
 // Fontawesome icons and web font
