Added loader and able to get all data using vuex store

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,8 +15,8 @@
 
 // Import bulma extensions
 @import '~bulma-extensions/bulma-calendar/dist/css/bulma-calendar.min.css';
-//@import '~bulma-extensions/bulma-steps/dist/css/bulma-steps.min.css';
 @import "~bulma-o-steps/bulma-steps.min";
+@import "~bulma-extensions/bulma-pageloader/dist/css/bulma-pageloader.min.css";
 
 
 // Fontawesome icons and web font
